# RanOS

./: .gitignore  CHANGELOG.md  README.md
Code/: Cargo.toml
Code/animation_generator/: README.md
Code/animation_generator/inc/jsoncpp/: json.h
Code/animation_generator/src/: Animation.hpp  RGB.hpp  gen.hpp  main.cpp  stub.hpp
Code/base/: Cargo.toml
Code/base/src/: app.rs  lib.rs  main.rs
Code/base/src/animation/: breath.rs  mod.rs  rainbow.rs  strobe.rs
Code/base/src/collections/: mod.rs  sparse_vec.rs
Code/base/src/draw/: mod.rs  null_draw.rs  pi_draw.rs  speed_pi_draw.rs  term_draw.rs
Code/base/src/ds/: const_val.rs  mod.rs  rgb.rs
Code/base/src/ds/collections/: frame.rs  mod.rs  sparse_vec.rs  vec_reader.rs  vec_writer.rs
Code/base/src/frame/: mod.rs
Code/base/src/runner/: breath.rs  mod.rs  rainbow.rs
Code/base/src/util/: frame.rs  info.rs  max_line.rs  mod.rs  rgb.rs  timer.rs
Code/base_cpp/: copy_stub
Code/base_cpp/src/: Types.hpp  main.cpp
Code/base_cpp/src/animation/: Animation.hpp  Breath.cpp  Rainbow.cpp  Rainbow.hpp  Strobe.cpp  Strobe.hpp
Code/base_cpp/src/collections/: Option.hpp
Code/base_cpp/src/draw/: APA102CDraw.cpp  APA102CDraw.hpp  DrawStats.cpp  DrawStats.hpp
Code/base_cpp/src/util/: Frame.cpp  Frame.hpp  RGB.cpp  RGB.hpp  Stub.cpp  Timer.cpp  Timer.hpp
Code/core/: Cargo.toml
Code/core/src/: app.rs  lib.rs  main.rs
Code/core/src/animation/: breath.rs  mod.rs
Code/core/src/draw/: null_draw.rs
Code/core/src/ds/: mod.rs  rgb.rs
Code/core/src/ds/collections/: frame.rs
Code/core/src/util/: mod.rs
Code/deprecated/animation_generator/: CMakeLists.txt
Code/deprecated/animation_generator/src/: gen.cpp  stub.cpp
Code/deprecated/base_cpp/: platformio.ini
Code/deprecated/base_cpp/src/animation/: Breath.hpp
Code/deprecated/base_cpp/src/draw/: APA102CDraw.hpp  DrawStats.cpp  DrawStats.hpp
Code/deprecated/base_cpp/src/util/: Stub.hpp  Timer.hpp
Code/deprecated/fftw-test/: Makefile
Code/deprecated/fftw-test/src/: stub.cpp  stub.hpp
Code/deprecated/gain-test/: Cargo.toml
Code/deprecated/gain-test/src/: main.rs  stereo.rs
Code/deprecated/hardware/: stub.ino
Code/deprecated/hardware/Base/: Breathing.hpp
Code/deprecated/hardware/MBreath/: Animation.hpp  LEDs.hpp
Code/deprecated/hardware/MRainbow/: MRainbow.ino  RGB.hpp  Rainbow.hpp  Time.hpp
Code/fftw-test/src/: main.cpp
Code/gain-test/: Cargo.toml
Code/gain-test/src/: gain.rs  lib.rs  main.rs
Code/hardware.deprecated/: stub.hpp
Code/hardware.deprecated/Base/: Animation.ino  Breathing.ino  LEDs.hpp  LEDs.ino  Rainbow.hpp  Rainbow.ino
Code/hardware.deprecated/MBreath/: Breathing.hpp  Breathing.ino  Macro.hpp
Code/hardware.deprecated/MRainbow/: LEDs.ino  Rainbow.ino
Code/hardware/Base/: Animation.hpp  Base.ino
Code/hardware/MBreath/: MBreath.ino  Time.ino
Code/hardware/MRainbow/: Animation.ino
Code/ranos/: Cargo.toml
Code/ranos/src/: main.rs
Code/ranos_animation/: Cargo.toml
Code/ranos_animation/src/: breath.rs  color_order.rs  cycle.rs  lib.rs  rainbow.rs  solid.rs  strobe.rs
Code/ranos_app/: Cargo.toml
Code/ranos_app/src/: config.rs  lib.rs  main.rs
Code/ranos_audio/: Cargo.toml
Code/ranos_audio/src/: accessor.rs  lib.rs  playback.rs  player.rs
Code/ranos_audio/src/analysis/: excitement.rs  mod.rs
Code/ranos_audio/src/util/: mod.rs
Code/ranos_core/: Cargo.toml
Code/ranos_core/src/: curve.rs  id.rs  lib.rs  max_line.rs  timer.rs
Code/ranos_display/: Cargo.toml
Code/ranos_display/src/: lib.rs
Code/ranos_doc/: Cargo.toml
Code/ranos_doc/src/: config.rs  lib.rs  main.rs
Code/ranos_draw/: Cargo.toml
Code/ranos_draw/src/: lib.rs  null_draw.rs  pi_draw.rs  term_draw.rs
Code/ranos_ds/: Cargo.toml
Code/ranos_ds/src/: const_val.rs  lib.rs  rgb.rs
Code/ranos_ds/src/collections/: frame.rs  mod.rs  sparse_vec.rs
Code/ranos_editor/: Cargo.toml
Code/ranos_filter/: Cargo.toml
Code/ranos_filter/src/: breath.rs  lib.rs  strobe.rs
Code/ranos_generator/: Cargo.toml
Code/ranos_generator/src/: breath.rs  color_order.rs  cycle.rs  lib.rs  rainbow.rs  solid.rs  strobe.rs
Code/serial_test/: Serial.cpp  Serial.hpp  main.cpp
Code/serial_test.deprecated/: Serial.hpp  main.cpp
Code/serial_test.deprecated/TeensyCode/: TeensyCode.ino
Hardware/KiCAD/apa102c-matrix/: apa102c-matrix.kicad_pcb  apa102c-matrix.kicad_pcb-bak  sym-lib-table
Hardware/KiCAD_AddOns/LEDs/: LEDs.bck  LEDs.dcm  LEDs.lib
Hardware/KiCAD_AddOns/LEDs/LEDs.pretty/: APA102-5050.kicad_mod  APA102C-5050.kicad_mod
Hardware/KiCAD_AddOns/MountingHole_Pad/: MountingHole_Pad.lib
Hardware/KiCAD_AddOns/MountingHole_Pad/MountingHole_Pad.pretty/: MountingHole_Pad.kicad_mod
Hardware/Projects/apa102c-matrix/: apa102c-matrix.sch  fp-info-cache  fp-lib-table  sym-lib-table
Notes/: ProjectOutline.md
Notes/Videos/01/: TalkingPoints.md
Scratch/amethyst_pong/: Cargo.toml
Scratch/amethyst_pong/assets/texture/: pong_spritesheet.ron
Scratch/amethyst_pong/src/: main.rs  pong.rs
