[package]
name = "base"
version = "0.1.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["term_draw"]
term_draw = ["colored", "ctrlc", "lazy_static"]
pi_draw = ["rppal", "ctrlc", "lazy_static"]

[dependencies]
rand = "0.7"

colored = { version = "2.0", optional = true }
ctrlc = { version = "3.1", optional = true }
lazy_static = { version = "1.4", optional = true }

rppal = { version = "0.11", optional = true }
