[package]
name = "base"
version = "0.1.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

lazy_static = "1.4"
ctrlc = "3.1"
clap = "2.33"

colored = "2.0"
rppal = "0.11"
