[package]
name = "ranos"
version = "0.1.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.6"

ranos_animation = { path="../ranos_animation" }
ranos_display = { path = "../ranos_display" }
ranos_draw = { path="../ranos_draw" }
