[package]
name = "ranos_animation"
version = "0.3.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typetag = "0.1.6"
serde = { version = "^1.0.118", features = ["derive"] }

ranos_core = { path = "../ranos_core" }
ranos_ds = { path = "../ranos_ds" }

[dev-dependencies]
ron = "0.6"
