[package]
name = "ranos_app"
version = "0.2.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
ctrlc = "3.1"
lazy_static = "1.4"

ranos_animation = { path="../ranos_animation" }
ranos_draw = { path="../ranos_draw" }
ranos_core = { path="../ranos_core", version="0.1" }
