[package]
name = "ranos_display"
version = "0.1.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ranos_core = { path = "../ranos_core" }
ranos_ds = { path = "../ranos_ds" }
ranos_animation = { path = "../ranos_animation" }
