[package]
name = "ranos_app"
version = "0.3.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1"
lazy_static = "1.4"
ron = "0.6"

ranos_core = { path="../ranos_core" }
ranos_animation = { path="../ranos_animation" }
ranos_display = { path = "../ranos_display" }
ranos_draw = { path="../ranos_draw" }

ranos_ds = { path = "../ranos_ds" }

serde_json = "1.0"
