[package]
name = "ranos_doc"
version = "0.3.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.6"

ranos_core = { path="../ranos_core" }
ranos_generator = { path="../ranos_generator" }
ranos_display = { path = "../ranos_display" }
ranos_draw = { path="../ranos_draw" }
ranos_ds = { path = "../ranos_ds" }
