[package]
name = "ranos_draw"
version = "0.3.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typetag = "0.1"
serde = { version = "1.0", features = ["derive"] }

ctrlc = "3.1"
lazy_static = "1.4"
colored = "2.0"

ranos_core = { path = "../ranos_core" }
ranos_ds = { path = "../ranos_ds" }
ranos_display = { path = "../ranos_display" }

[target.'cfg(target_os="linux")'.dependencies]
rppal = "0.11"

[dev-dependencies]
ron = "0.6"
