[package]
name = "ranos_ds"
version = "0.3.0"
authors = ["Fluhzar <fluhzar@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.118", features = ["derive"] }
rand = "0.8"
vectors = "0.3"
